src/css/index.css
@import 'https://fonts.googleapis.com/css?family=Stardos+Stencil';
@import "abd-toggle.css";

/*fade in animation*/
@keyframes fadein {
    from {opacity: 0;}
    to {opacity: 1;}
}
@keyframes fadeout {
    from {opacity: 1;}
    to {opacity: 0;}
}
.fadein{
    opacity: 0;
    animation-name: fadein;
    animation-duration: 1200ms;
    animation-timing-function: ease-out;
    animation-fill-mode: forwards;
}
.fadeout{
    opacity: 1;
    animation-name: fadeout;
    animation-duration: 300ms;
    animation-timing-function: ease-in;
    animation-fill-mode: forwards;
}
.icon--flag-white:after{
    content: "\2690";
}
.icon--flag-black:after{
    content: "\2691";
}
.icon--shield-cross:after{
    content: "\26E8";
}
.start-invisible {
    opacity: 0;
}

#loader {
    position: fixed;
    top:0;
    left:0;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
}

#loader-border{
    border: 5px solid #809e2f;
    border-radius: 40px;
    width: 80px;
    height: 80px;
    top: 51%;
    position: absolute;
    background-color: white;
    box-shadow: 0 0 5px 5px white;
}

/*overrid muicss*/
.mui-btn--primary, .mui-btn--danger {
    background-color: #a5c04d !important;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5) !important;
}

/******/

.background-cover {
    background: url(../img/cod-1920x1200-1-min.jpg) top center fixed;
    background-size: cover;
    background-color: #d4d2d2;
    background-blend-mode: darken;
}


p {
    border-style: none;
    outline: none;
    cursor: default;
}

table {
    width: 100%;
}

.round-white-pane {
    border: 1px solid white;
    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
    background-color: rgba(248, 248, 248, 0.85);
    border-radius: 5px;
    margin-bottom: 10px;
}

#main {
    display: flex;
    justify-content: center;
    flex: 1;
    flex-flow: row;
    padding-top: 30px;
}

.title {
    margin: 20px;
    z-index: -1;
    position: fixed;
    right: 70px;
    font-size: 30px;
    letter-spacing: normal;
    font-family:  'Stardos Stencil', cursive;
}


/******* CENTRAL STRUCTURE *******/
.center-container {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: center;
    align-content: center;
    align-items: flex-start;
}

.center-top-container {
    justify-content: center;
    width: 100%;
    height: 280px;
}

.center-bottom-container {
    justify-content: flex-start;
    width: 100%;
    border: 1px solid white;
    box-shadow: -1px 0px 60px 0px rgba(255, 255, 255, 0.75), 1px 0 60px 0px rgba(255, 255, 255, 0.75);
    background-color: rgba(248, 248, 248, 0.85);
    margin: 30px 0;
}

.center-container .inner {
    background-color: #FFFFFF;
    display: inline-flex;
    flex-flow: row;
    width: 1024px;
    vertical-align: middle;
}

.generator-pane {
    padding-bottom: 0;
    border: 1px solid white;
    box-shadow: -1px 0px 60px 0px rgba(255, 255, 255, 0.75), 1px 0 60px 0px rgba(255, 255, 255, 0.75);
    background-color: rgba(248, 248, 248, 0.85);
    display: flex;
    flex-flow: column;
    justify-content: space-between;
}

.generator-pane .power-pie-controller {
    display: flex;
    justify-content: space-between;
    flex-flow: row;
    margin: 0 5px;
}

.generator-pane .teams-container {
    justify-content: center;
    display: flex;
    flex-flow: row;
    padding: 10px;
}

.team {
    padding: 10px 15px;
}

.redteam {
    color: #832927;
}

.redteam td {
    width: 150px;
    text-align: end;
}

.blueteam {
    color: #205662;
}
.blueteam td{
    width: 150px;
    text-align: start;
}

/****** GAMES PANEL *******/
.games-pane {
    background-color: transparent;
    padding: 15px;
    width: 200px;
    display: flex;
    flex-flow: column;
    justify-content: flex-start;
}

.game {
    display: flex;
    justify-content: flex-end;
    width: 100%;
}

/****** PLAYERS PANE *******/
.details-pane {
    width: 700px;
    margin-bottom: 30px;
}

.details-pane-summary {
    display: flex;
    flex-flow: row;
    justify-content: space-between;
    padding: 5px 10px;
}

.details-summary-chart {
    width: 200px;
    height: 200px;
}

td, th {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    border: hidden;
    text-align: left;
    cursor: default;
    position: relative;
}

.excluded {
    color: #b1b1b1 !important;
}

/** summary and game grids **/
.game-grid {
    padding: 5px 10px;
}

.game-grid > .game-details {
    padding: 0 0 5px 10px;
}

.game-grid .game-grid-title {
    font-weight: bold;
    margin-right: 10px;
}

.game-grid .bit {
    padding: 5px;
    margin: 2px;
    border-radius: 5px;
    background-color: #4C5B5C;
    color: white;
    height: 25px;
    line-height: 13px;
    text-align: center;

}

.game-grid .bit.thin-wrap{
    font-size: 7px;
    font-weight: lighter;
    background-color: transparent;
    border-color: #4C5B5C;
    color: #4C5B5C;

}

.game-grid .bit.thin-wrap .icon{
   font-size: 14px;
    color: #809e2f;
}

.game-grid .bit.thin-wrap > span:not(.icon) {
    font-size: 8px;
}

.game-grid .bit > span {
    font-weight: lighter;
    font-size: small;
    margin: 0 1px;
}

.game-grid .bit > span:first-child{
    font-weight: bold;
}

.players-table th {
    color: #424242;
    padding: 5px 10px 0 10px;
    font-weight: bold;
    font-size: large;
}

.players-table td {
    padding: 5px 10px;
}

td.name > div:first-child {
    font-weight: bold;
    font-size: large;
}
td.toggle {
    width: 100px;
}
.md-subheader {
    margin-top: 50px;
    margin-right: 0 !important;
    padding: 10px;
    vertical-align: middle;
    height: 40px;
    line-height: 40px;
    font-size: 25px;
    background-color: #F3F3F3 !important;
}

/****** PLAYERS LIST **********/
.left-side-buttons {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    width: 100%;
}

.row {
    display: flex;
    flex-flow: row;
    width: 100%;
    color: #747474;
}

.row > div {
    width: 16%;
}

.summary__column-player {
    width: 350px;
}

.summary__column-player .player-name {
    font-weight: bold;
    font-size: 16px;
    width: 350px;
}
.summary__column-player .player-name-games {
    font-size: 12px;
    color:grey;
}


.game__column-player {
    width: 230px;
    display: flex;
    justify-content: flex-start;
    flex-flow: row;
}
.game__column-player .player-name{
    max-width: 150px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}


.weapons-col {
    max-width: 300px;
    display: inline-flex;
    flex-direction: row;
    flex-wrap: wrap;
    max-height: 35px;
    overflow: hidden;
}


.button {
    cursor: pointer;
    padding: 5px 0;
}

.button:hover {
    color: #EFEFEF;
}

.blue {
    color: #0000FF;
}

.red {
    color: #FF0000;
}

.icon-spinner9:before {
    content: "\e900";
}


/* generals */
.flex-columns {
    display: flex;
    flex-flow: column;
}

.flex-rows {
    display: flex;
    flex-flow: row;
}

.th__clickable {
    cursor: pointer !important;
}
.th__clickable.clicked {
    background-color: #809e2f;
    transition: background-color 2s ease-in-out;
}
.th__clickable > span.asc:after {
    position: absolute;
    content: no-close-quote;
    width: 0;
    height: 0;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-bottom: 5px solid black;
}
.th__clickable > span.desc:after {
    position: absolute;
    content: no-close-quote;
    width: 0;
    height: 0;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 5px solid black;
}

.symbol {
    font-family: Significante;

}

/*effects*/
.inset-text-effect {
    display: inline-block;
    box-sizing: content-box;
    border: none;
    text-align: center;
    text-overflow: clip;
    white-space: pre;
    color: #888888;
    text-shadow: 1px 1px 0 rgba(255,255,255,0.7) , -1px -1px 1px rgba(0,0,0,0.7) ;
}
.inset-text-effect::selection { background: #5af; color: #fff; text-shadow: none; }

